# super_mouse_stm32f4_usb_device

./: .cproject  .gitignore  .gitmodules  .mxproject  .project  Mouse_USB_Client_Relay Debug.launch  Mouse_USB_Client_Relay.ioc  Readme.md  STM32F401CCUX_FLASH.ld  notes.txt  super_mouse_stm32f4_usb_device Debug.launch  super_mouse_stm32f4_usb_device.ioc
Core/Inc/: acqTrigger.h  dataAcq.h  default_config.h  mouse_event_handler.hpp  mouse_hid_reports.h  reporting_functions.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: acqTrigger.c  config.cpp  dataAcq.c  default_config.cpp  flash_config.cpp  (+9 more)
circular_buffer/: CMakeLists.txt  cbuffer_readme.md  circular_buffers.cpp  circular_buffers.hpp  test_ring_buffer.cpp
flash_key_value_tree/: Flash_Configuration_Data_Storage.md  flash_key_value_node.cpp  flash_key_value_node.hpp  flash_key_value_tree.cpp  flash_key_value_tree.hpp  flash_readme.md  key_value_node.cpp  key_value_node.hpp  key_value_tree.cpp  key_value_tree.hpp
glue_blocks/: CMakeLists.txt  CMakeSettings.json  circular_buffer.cpp  circular_buffers.cpp  circular_buffers.hpp  log  old_circular_buffer.tmp  ring_buffer.cpp  ring_buffer.hpp  ring_buffer_instances.cpp  test_ring_buffer.cpp
glue_blocks/TestRingBuffer/: CMakeLists.txt  CMakeSettings.json  ring_buffer.hpp  ring_buffer_instances.hpp  test_ring_buffer.cpp
hid_rpc/: hid_rpc.cpp  hid_rpc.hpp
mouse/: mouse_event_handler.cpp  mouse_event_handler.hpp  mouse_hid_reports.h  reporting_functions.cpp  reporting_functions.h
rpc/: rpc.cpp  rpc.hpp  rpc_impl.cpp  rpc_impl.hpp
utils/: sequential_enum.h
(+14 files in other folders)
